--- a/contratoesg.html
+++ b/contratoesg.html
@@ -63,7 +63,7 @@ graph TD
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAM EXPEDITIONS SANCTUM | AIONDJ | Stellantis ESG</title>
+        <title>RAM EXPEDITIONS SANCTUM | Stellantis ESG</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -72,7 +72,6 @@ graph TD
         <div class="brand-bar">
             <img src="img/ram-logo.png" alt="RAM" class="logo">
             <img src="img/stellantis-logo.png" alt="Stellantis" class="logo">
-            <img src="img/aiondj-signature.png" alt="AIONDJ" class="logo">
         </div>
         <nav>
             <ul>
@@ -94,7 +93,7 @@ graph TD
         </div>
         <div class="hero-content">
             <h1>REGENERAÇÃO ATRAVÉS DA AVENTURA</h1>
-            <p>RAM | Stellantis | AIONDJ | COP30</p>
+            <p>RAM | Stellantis | COP30</p>
             <div class="partners-logos">
                 <img src="img/tomorrowland-logo.png" alt="Tomorrowland">
                 <img src="img/amazon-fund.png" alt="Fundo Amazônia">
@@ -273,9 +272,9 @@ window.addEventListener('load', () => {
         </a>
     </div>
     <div class="aiondj-signature">
-        <p>Embaixador Oficial: <strong>Daniel Domingos (AIONDJ)</strong></p>
-        <img src="img/aiondj-signature.png" alt="Assinatura AIONDJ">
+        
     </div>
+    <p>&copy; 2025 RAM Expeditions Sanctum. Todos os direitos reservados.</p>
 </footer>
 
 # Deploy na Vercel
