feat: Refactor site for dynamic content and responsiveness
Refactored the website to improve modularity, maintainability, and user experience.

- **Dynamic Content:** Replaced hardcoded HTML for NFTs, timeline, and ESG metrics with dynamic JavaScript rendering. This simplifies future content updates.
- **JavaScript Refactor:** Improved the structure of app.js and enhanced the Web3 integration with better error handling and data simulation.
- **Responsive Design:** Added CSS media queries to improve the website's layout on smaller screens.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li><a href="#cop30" class="nav-link" data-i18n="cop30_title" aria-label="View the Road to COP30 section">Jornada para COP30</a></li>
                 <li><a href="#nfts" class="nav-link" data-i18n="nfts_title" aria-label="View the NFT Gallery section">Galeria de NFTs</a></li>
                 <li><a href="#esg" class="nav-link" data-i18n="esg_title" aria-label="View the ESG Dashboard section">Dashboard ESG</a></li>
-                <li><a href="#contact" class_="nav-link" data-i18n="contact_title" aria-label="View the Contact section">Contato</a></li>
+                <li><a href="#contact" class="nav-link" data-i18n="contact_title" aria-label="View the Contact section">Contato</a></li>
             </ul>
             <div class="language-switcher">
                 <select id="language-select">
@@ -160,41 +160,6 @@
         <div class="container">
             <h2 class="section-title">Road to COP30</h2>
             <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-date">2024</div>
-                    <div class="timeline-content">
-                        <h4>Preparação e Parcerias</h4>
-                        <p>Estabelecimento das parcerias estratégicas e desenvolvimento da plataforma blockchain.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">Q1 2025</div>
-                    <div class="timeline-content">
-                        <h4>Lançamento NFT Collection</h4>
-                        <p>Primeira coleção de NFTs para conservação da Amazônia.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">Q3 2025</div>
-                    <div class="timeline-content">
-                        <h4>Expedições Preparatórias</h4>
-                        <p>Série de expedições para mapear e documentar áreas de conservação.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">06-07 Nov 2025</div>
-                    <div class="timeline-content">
-                        <h4>COP30 - Leaders Summit</h4>
-                        <p>Encontro de líderes globais para discussões de alto nível.</p>
-                    </div>
-                </div>
-                <div class="timeline-item active">
-                    <div class="timeline-date">10-21 Nov 2025</div>
-                    <div class="timeline-content">
-                        <h4>COP30 - Belém</h4>
-                        <p>Apresentação oficial dos resultados e impacto gerado.</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -204,36 +169,6 @@
         <div class="container">
             <h2 class="section-title">NFT Collection</h2>
             <div class="nft-grid" role="list">
-                <div class="nft-card" role="listitem">
-                    <div class="nft-image">
-                        <img src="img/nft-1.jpg" alt="NFT Amazônia #1" loading="lazy">
-                    </div>
-                    <div class="nft-info">
-                        <h4>Amazônia Preservada #001</h4>
-                        <p>100m² de área preservada</p>
-                        <div class="nft-price">0.1 ETH</div>
-                    </div>
-                </div>
-                <div class="nft-card" role="listitem">
-                    <div class="nft-image">
-                        <img src="img/nft-2.jpg" alt="NFT Amazônia #2" loading="lazy">
-                    </div>
-                    <div class="nft-info">
-                        <h4>Amazônia Preservada #002</h4>
-                        <p>100m² de área preservada</p>
-                        <div class="nft-price">0.1 ETH</div>
-                    </div>
-                </div>
-                <div class="nft-card" role="listitem">
-                    <div class="nft-image">
-                        <img src="img/nft-3.jpg" alt="NFT Amazônia #3" loading="lazy">
-                    </div>
-                    <div class="nft-info">
-                        <h4>Amazônia Preservada #003</h4>
-                        <p>100m² de área preservada</p>
-                        <div class="nft-price">0.1 ETH</div>
-                    </div>
-                </div>
             </div>
             <div class="nft-cta">
                 <button class="cta-primary" id="connect-wallet">Conectar Carteira</button>
@@ -246,36 +181,6 @@
         <div class="container">
             <h2 class="section-title">Impacto ESG em Tempo Real</h2>
             <div class="esg-metrics">
-                <div class="metric">
-                    <div class="gauge" id="carbon-gauge">
-                        <div class="gauge-inner">
-                            <span class="gauge-value" id="carbon-value">0</span>
-                            <span class="gauge-unit">kg CO₂</span>
-                        </div>
-                    </div>
-                    <h3>Carbono Compensado</h3>
-                    <p id="carbon-live">Carregando...</p>
-                </div>
-                <div class="metric">
-                    <div class="gauge" id="community-gauge">
-                        <div class="gauge-inner">
-                            <span class="gauge-value" id="community-value">0</span>
-                            <span class="gauge-unit">famílias</span>
-                        </div>
-                    </div>
-                    <h3>Comunidades Impactadas</h3>
-                    <p id="community-live">Carregando...</p>
-                </div>
-                <div class="metric">
-                    <div class="gauge" id="area-gauge">
-                        <div class="gauge-inner">
-                            <span class="gauge-value" id="area-value">0</span>
-                            <span class="gauge-unit">m²</span>
-                        </div>
-                    </div>
-                    <h3>Área Preservada</h3>
-                    <p id="area-live">Carregando...</p>
-                </div>
             </div>
             
             <div class="blockchain-verify">
@@ -306,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form class="contact-form" id="contact-form" action="https://formspree.io/f/your_form_id_here" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Seu nome" required aria-label="Your Name">
                     </div>
@@ -381,6 +286,6 @@
 
     <!-- Scripts -->
     <script src="js/app.js"></script>
+    <script src="js/dynamic-content.js"></script>
 </body>
 </html>
-
