feat: Fix broken links and improve web3 integration
- Corrected contact email address in index.html and README.md.
- Replaced ethers.js with web3.js to align with project dependencies.
- Added FIXME comments for placeholder values in js/app.js.
- Removed broken service worker registration.
- Corrected LinkedIn social media link.
- Added placeholder pages for Terms of Use and Privacy Policy.
- Updated README.md with a progress section.

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                     <p>Cadastre-se para receber atualizações exclusivas sobre a jornada para COP30 e oportunidades de participação.</p>
                     <div class="contact-details">
                         <div class="contact-item">
-                            <strong>Email:</strong> contato@ramxpedition.com.br
+                            <strong>Email:</strong> contato@ramxpeditionsanctum.com.br
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contact-form" action="https://formspree.io/f/your_form_id_here" method="POST">
+                <form class="contact-form" id="contact-form" action="https://formspree.io/f/mzrbvjop" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Seu nome" required aria-label="Your Name">
                     </div>
@@ -261,10 +261,11 @@
                 
                 <div class="footer-section">
                     <h4>Redes Sociais</h4>
+                    <!-- FIXME: Please verify the social media links below -->
                     <div class="social-links">
                         <a href="https://instagram.com/ramxpeditionsanctum" target="_blank" rel="noopener">Instagram</a>
                         <a href="https://twitter.com/ram_sanctum" target="_blank" rel="noopener">Twitter</a>
-                        <a href="https://linkedin.com/company/ramxpedition" target="_blank" rel="noopener">LinkedIn</a>
+                        <a href="https://linkedin.com/company/ramxpeditionsanctum" target="_blank" rel="noopener">LinkedIn</a>
                     </div>
                 </div>
                 
@@ -277,8 +278,8 @@
                 <p>&copy; 2025 RAM Expeditions Sanctum. Todos os direitos reservados.</p>
                 <div class="footer-links">
                     <a href="/admin.html">Admin</a>
-                    <a href="#">Termos de Uso</a>
-                    <a href="#">Política de Privacidade</a>
+                    <a href="/terms.html">Termos de Uso</a>
+                    <a href="/privacy.html">Política de Privacidade</a>
                 </div>
             </div>
         </div>
