--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
         </div>
         <nav class="main-nav" role="navigation">
             <div class="nav-toggle" id="nav-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
             </div>
             <ul id="nav-menu" class="nav-menu">
                 <li><a href="#manifesto" class="nav-link" data-i18n="manifesto_title" aria-label="View the Manifesto section">Manifesto</a></li>
@@ -90,8 +87,8 @@
         </div>
         <div class="hero-content">
             <h1 class="hero-title">
-                    <span class="title-line" data-i18n="hero_title">RAM Expedition</span>
-                    <span class="title-line highlight">Sanctum</span>
+                    <p class="title-line" data-i18n="hero_title">RAM Expedition</p>
+                    <p class="title-line highlight">Sanctum</p>
                 </h1>
                 <h2 class="hero-subtitle" data-i18n="hero_subtitle">Site oficial da jornada RAM Expedition Sanctum para COP30 2025.</h2>
             
