--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- Header -->
     <header id="header">
         <div class="brand-bar">
-            <img src="img/ram-logo.png" alt="RAM" class="logo" loading="lazy">
-            <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" loading="lazy">
+            <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
+            <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
         </div>
         <nav class="main-nav" role="navigation">
             <div class="nav-toggle" id="nav-toggle">
