--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- Header -->
     <header id="header">
         <div class="brand-bar">
+            <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
             <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
             <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
         </div>
