--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
         </div>
         <nav class="main-nav" role="navigation">
-            <div class="nav-toggle" id="nav-toggle">
-            </div>
+            <button class="nav-toggle" id="nav-toggle" aria-label="Menu">
+                <span class="hamburger"></span>
+            </button>
             <ul id="nav-menu" class="nav-menu">
                 <li><a href="#home" class="nav-link active" data-section="home">Home</a></li>
                 <li><a href="#manifesto" class="nav-link" data-section="manifesto">Manifesto</a></li>
