feat: Add countdowns subpage for partner events

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="#manifesto" class="nav-link" data-section="manifesto">Manifesto</a></li>
                 <li><a href="#expedition" class="nav-link" data-section="expedition">A Expedição</a></li>
                 <li><a href="#partners" class="nav-link" data-section="partners">Parceiros</a></li>
+                <li><a href="countdowns.html" class="nav-link" data-section="countdowns">Countdowns</a></li>
             </ul>
         </nav>
     </header>
@@ -69,17 +70,9 @@
             <div class="countdown-container">
                 <h3>Contagem regressiva para COP30</h3>
                 <div class="countdown" id="countdown">
-                    <div class="countdown-item">
-                        <span class="countdown-number" id="days">000</span>
+                    <div class="countdown-item" style="border: 1px solid gray; padding: 10px; border-radius: 5px;">
+                        <span class="countdown-number" id="days">77</span>
                         <span class="countdown-label">Dias</span>
-                    </div>
-                    <div class="countdown-item">
-                        <span class="countdown-number" id="hours">00</span>
-                        <span class="countdown-label">Horas</span>
-                    </div>
-                    <div class="countdown-item">
-                        <span class="countdown-number" id="minutes">00</span>
-                        <span class="countdown-label">Minutos</span>
                     </div>
                 </div>
             </div>
