--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                 <span class="hamburger"></span>
             </button>
             <ul id="nav-menu" class="nav-menu">
-                <li><a href="#home" class="nav-link active" data-section="home">Home</a></li>
-                <li><a href="#manifesto" class="nav-link" data-section="manifesto">Manifesto</a></li>
-                <li><a href="#expedition" class="nav-link" data-section="expedition">A Expedição</a></li>
-                <li><a href="#partners" class="nav-link" data-section="partners">Parceiros</a></li>
-                <li><a href="countdowns.html" class="nav-link" data-section="countdowns">Countdowns</a></li>
+                <div class="nav-links-left">
+                    <li><a href="#home" class="nav-link active" data-section="home">Home</a></li>
+                    <li><a href="#manifesto" class="nav-link" data-section="manifesto">Manifesto</a></li>
+                    <li><a href="#expedition" class="nav-link" data-section="expedition">A Expedição</a></li>
+                    <li><a href="#partners" class="nav-link" data-section="partners">Parceiros</a></li>
+                    <li><a href="countdowns.html" class="nav-link" data-section="countdowns">Countdowns</a></li>
+                </div>
+                <li><a href="login.html" class="nav-link" data-section="login">Login</a></li>
             </ul>
         </nav>
     </header>
