--- a/privacy.html
+++ b/privacy.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,7 +8,31 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <!-- Header -->
+    <header id="header">
+        <div class="brand-bar">
+            <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
+            <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
+            <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
+        </div>
+        <nav class="main-nav" role="navigation">
+            <button class="nav-toggle" id="nav-toggle" aria-label="Menu">
+                <span class="hamburger"></span>
+            </button>
+            <ul id="nav-menu" class="nav-menu">
+                <div class="nav-links-left">
+                    <li><a href="index.html#home" class="nav-link" data-section="home">Home</a></li>
+                    <li><a href="index.html#manifesto" class="nav-link" data-section="manifesto">Manifesto</a></li>
+                    <li><a href="index.html#expedition" class="nav-link" data-section="expedition">A Expedição</a></li>
+                    <li><a href="index.html#partners" class="nav-link" data-section="partners">Parceiros</a></li>
+                    <li><a href="countdowns.html" class="nav-link" data-section="countdowns">Countdowns</a></li>
+                </div>
+                <li><a href="login.html" class="nav-link" data-section="login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container" style="padding-top: 150px;">
         <h1>Política de Privacidade</h1>
         <p>Placeholder for Política de Privacidade.</p>
     </div>
