fix(navigation): use event listeners for hero buttons

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             </div>
             
             <div class="hero-cta">
-                <button class="cta-primary" onclick="scrollToSection('expedition')">
+                <button id="cta-expedition" class="cta-primary" data-section="expedition">
                     Participar da Expedição
                 </button>
-                <button class="cta-secondary" onclick="scrollToSection('manifesto')">
+                <button id="cta-manifesto" class="cta-secondary" data-section="manifesto">
                     Conhecer o Manifesto
                 </button>
             </div>
