--- a/index.html
+++ b/index.html
@@ -183,12 +183,11 @@
     <script src="js/dynamic-content.js"></script>
 
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getAuth, GoogleAuthProvider, signInWithPopup, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-    <!-- Your web app's Firebase configuration -->
-    <script>
         // TODO: Replace with your own Firebase project configuration
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
@@ -200,12 +199,25 @@
         };
 
         // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const db = firebase.firestore();
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getFirestore(app);
+
+        window.firebase = {
+            app,
+            auth,
+            db,
+            GoogleAuthProvider,
+            signInWithPopup,
+            onAuthStateChanged,
+            signOut,
+            doc,
+            getDoc,
+            setDoc
+        };
     </script>
 
-    <script src="js/auth.js"></script>
+    <script src="js/auth.js" type="module"></script>
 
     <script>
         const loginModal = document.getElementById('login-modal');
