fix(countdowns): display countdowns in a grid

--- a/countdowns.html
+++ b/countdowns.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="countdown-grid">
         <section id="countdowns-page" class="hero">
             <div class="video-bg">
                 <video autoplay muted loop playsinline poster="img/hero-poster.jpg">
@@ -60,9 +60,7 @@
             </div>
         </section>
 
-        <div class="countdown-grid">
-            <!-- Countdown cards will be dynamically generated here -->
-        </div>
+        <!-- Countdown cards will be dynamically generated here -->
     </main>
 
     <!-- Footer -->
