fix(layout): move brand-bar out of header

--- a/countdowns.html
+++ b/countdowns.html
@@ -24,11 +24,6 @@
 
     <!-- Header -->
     <header id="header">
-        <div class="brand-bar">
-            <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
-            <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
-            <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
-        </div>
         <nav class="main-nav" role="navigation">
             <button class="nav-toggle" id="nav-toggle" aria-label="Menu">
                 <span class="hamburger"></span>
@@ -45,6 +40,12 @@
             </ul>
         </nav>
     </header>
+
+    <div class="brand-bar" style="margin-top: 80px;">
+        <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
+        <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
+        <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
+    </div>
 
     <main class="countdown-grid">
         <section id="countdowns-page" class="hero">
