--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
 
     <!-- Header -->
     <header id="header">
-        <div class="brand-bar">
-            <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
-            <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
-            <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
-        </div>
         <nav class="main-nav" role="navigation">
             <ul id="nav-menu" class="nav-menu">
                 <div class="nav-links-left">
@@ -49,6 +44,12 @@
             </ul>
         </nav>
     </header>
+
+    <div class="brand-bar" style="margin-top: 80px;">
+        <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
+        <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
+        <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
+    </div>
 
     <!-- Hero Section -->
     <section class="hero" id="hero">
