--- a/countdowns.html
+++ b/countdowns.html
@@ -41,7 +41,7 @@
         </nav>
     </header>
 
-    <div class="brand-bar" style="margin-top: 80px;">
+    <div class="brand-bar">
         <img src="img/sanctumportal-logo.png" alt="Sanctum Portal" class="logo" style="height: 40px;" loading="lazy">
         <img src="img/ram-logo.png" alt="RAM" class="logo" style="height: 40px;" loading="lazy">
         <img src="img/stellantis-logo.png" alt="Stellantis" class="logo" style="height: 55px;" loading="lazy">
