--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <!-- Scripts -->
     <script src="js/app.js"></script>
     <script src="js/dynamic-content.js"></script>
+    <script src="js/countdown.js"></script>
 
     <!-- Firebase SDK -->
     <script type="module">
