feat(layout): add partners section to countdowns page

--- a/countdowns.html
+++ b/countdowns.html
@@ -62,6 +62,19 @@
         </section>
 
         <!-- Countdown cards will be dynamically generated here -->
+
+        <section id="partners">
+            <div class="container">
+                <h2 class="section-title">Nossos Parceiros</h2>
+                <p style="text-align: center; max-width: 800px; margin: -2rem auto 4rem;">Esta missão só é possível através da colaboração de líderes em suas áreas, unidos por um propósito comum de sustentabilidade e impacto.</p>
+                <div class="partners-grid">
+                    <img src="img/stellantis-logo.png" alt="Stellantis Logo" class="partner-logo">
+                    <img src="img/tomorrowland-logo.png" alt="Tomorrowland Logo" class="partner-logo">
+                    <img src="img/un-climate.png" alt="UN Climate Change Logo" class="partner-logo">
+                    <img src="img/amazon-fund.png" alt="Amazon Fund Logo" class="partner-logo">
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
