--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2 class="hero-subtitle" data-i18n="hero_subtitle">Site oficial da jornada RAM Expedition Sanctum para COP30 2025.</h2>
             
             <!-- Countdown -->
-            <div class="countdown" id="countdown">
+            <div class="countdown countdown-grid" id="countdown">
                 <div class="countdown-item" style="border: 1px solid gray; padding: 10px; border-radius: 5px;">
                     <span class="countdown-number" id="days">77</span>
                     <span class="countdown-label">Dias</span>
