--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Hero Section -->
     <section class="hero" id="hero">
         <div class="video-bg">
-                                    <video controls autoplay muted loop poster="img/manifesto-poster.jpg">
+                                    <video controls autoplay muted loop poster="img/hero-poster.jpg">
                 <source src="videos/manifesto-esg.mp4" type="video/mp4">
                 <source src="videos/manifesto-esg.webm" type="video/webm">
             </video>
